--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,26 @@
       "name": "davenfund",
       "path": "",
       "files": {
+        "54213387": {
+          "id": "54213387",
+          "path": "assets/css/3-modules/_video.sass",
+          "output": "assets/css/3-modules/_video.css",
+          "name": "_video.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
+          "type": "sass"
+        },
         "2a91529d": {
           "id": "2a91529d",
           "path": "edit.php",
@@ -199,7 +219,7 @@
           "libSass": true,
           "compass": false,
           "fullCompass": false,
-          "outputStyle": "compressed",
+          "outputStyle": "expanded",
           "customOutput": false,
           "imported": false,
           "parents": [],
@@ -292,11 +312,11 @@
           ],
           "type": "sass"
         },
-        "a00c4c77": {
-          "id": "a00c4c77",
-          "path": "assets/css/4-pages/all-pg.sass",
-          "output": "assets/css/4-pages/all-pg.css",
-          "name": "all-pg.sass",
+        "34298d59": {
+          "id": "34298d59",
+          "path": "assets/css/1-tools/_normalize.scss",
+          "output": "assets/css/1-tools/_normalize.css",
+          "name": "_normalize.scss",
           "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
@@ -312,11 +332,11 @@
           ],
           "type": "sass"
         },
-        "34298d59": {
-          "id": "34298d59",
-          "path": "assets/css/1-tools/_normalize.scss",
-          "output": "assets/css/1-tools/_normalize.css",
-          "name": "_normalize.scss",
+        "de7772a4": {
+          "id": "de7772a4",
+          "path": "assets/css/4-pages/profile.sass",
+          "output": "assets/css/4-pages/profile.css",
+          "name": "profile.sass",
           "category": "CSS",
           "autoCompile": true,
           "autoprefixer": false,
@@ -330,16 +350,127 @@
           "parents": [],
           "type": "sass"
         },
-        "8b4b594a": {
-          "id": "8b4b594a",
-          "path": "assets/includes/carousel.php",
-          "output": "assets/includes/carousel.php",
-          "name": "carousel.php",
-          "category": "JUST_WATCH",
+        "f5fc9f51": {
+          "id": "f5fc9f51",
+          "path": "assets/css/4-pages/edit.sass",
+          "output": "assets/css/4-pages/edit.css",
+          "name": "edit.sass",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "php"
+          "type": "sass"
+        },
+        "0db05825": {
+          "id": "0db05825",
+          "path": "assets/css/4-pages/login.sass",
+          "output": "assets/css/4-pages/login.css",
+          "name": "login.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
+          "type": "sass"
+        },
+        "b9781c03": {
+          "id": "b9781c03",
+          "path": "assets/css/4-pages/register.sass",
+          "output": "assets/css/4-pages/register.css",
+          "name": "register.sass",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "8eb67e09": {
+          "id": "8eb67e09",
+          "path": "assets/css/4-pages/index.sass",
+          "output": "assets/css/4-pages/index.css",
+          "name": "index.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
+          "type": "sass"
+        },
+        "bf460d63": {
+          "id": "bf460d63",
+          "path": "assets/css/3-modules/_nav.sass",
+          "output": "assets/css/3-modules/_nav.css",
+          "name": "_nav.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
+          "type": "sass"
+        },
+        "b16ae4f7": {
+          "id": "b16ae4f7",
+          "path": "assets/img/red-horiz-logo.png",
+          "output": "assets/img/red-horiz-logo.png",
+          "name": "red-horiz-logo.png",
+          "category": "IMAGE",
+          "size": 68857,
+          "type": "png",
+          "initialSize": 68857,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "265daf23": {
+          "id": "265daf23",
+          "path": "assets/img/red-u-logo.png",
+          "output": "assets/img/red-u-logo.png",
+          "name": "red-u-logo.png",
+          "category": "IMAGE",
+          "size": 1761,
+          "type": "png",
+          "initialSize": 1761,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
