Linking: Narrative Flow
Built the links and pages in a way that you *have* to move from Page X
to get to Page Y. Helps the flow.

Other Sassing happened...

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,17 @@
       "name": "davenfund",
       "path": "",
       "files": {
+        "46919818": {
+          "id": "46919818",
+          "path": "buffer.php",
+          "output": "buffer.php",
+          "name": "buffer.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
         "54213387": {
           "id": "54213387",
           "path": "assets/css/3-modules/_video.sass",
@@ -83,22 +94,6 @@
           "imported": false,
           "parents": [],
           "type": "php"
-        },
-        "d5f6b5c8": {
-          "id": "d5f6b5c8",
-          "path": "assets/css/style.css",
-          "output": "assets/css/style-dist.css",
-          "name": "style.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
         },
         "6fee5313": {
           "id": "6fee5313",
@@ -292,87 +287,11 @@
           "parents": [],
           "type": "php"
         },
-        "412e05b9": {
-          "id": "412e05b9",
-          "path": "assets/css/3-modules/_box.sass",
-          "output": "assets/css/3-modules/_box.css",
-          "name": "_box.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "abc0766b"
-          ],
-          "type": "sass"
-        },
         "34298d59": {
           "id": "34298d59",
           "path": "assets/css/1-tools/_normalize.scss",
           "output": "assets/css/1-tools/_normalize.css",
           "name": "_normalize.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "abc0766b"
-          ],
-          "type": "sass"
-        },
-        "de7772a4": {
-          "id": "de7772a4",
-          "path": "assets/css/4-pages/profile.sass",
-          "output": "assets/css/4-pages/profile.css",
-          "name": "profile.sass",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "f5fc9f51": {
-          "id": "f5fc9f51",
-          "path": "assets/css/4-pages/edit.sass",
-          "output": "assets/css/4-pages/edit.css",
-          "name": "edit.sass",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "0db05825": {
-          "id": "0db05825",
-          "path": "assets/css/4-pages/login.sass",
-          "output": "assets/css/4-pages/login.css",
-          "name": "login.sass",
           "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
@@ -404,26 +323,6 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "sass"
-        },
-        "8eb67e09": {
-          "id": "8eb67e09",
-          "path": "assets/css/4-pages/index.sass",
-          "output": "assets/css/4-pages/index.css",
-          "name": "index.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "abc0766b"
-          ],
           "type": "sass"
         },
         "bf460d63": {
@@ -471,6 +370,136 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "49dba88a": {
+          "id": "49dba88a",
+          "path": "assets/css/4-pages/_authen.sass",
+          "output": "assets/css/4-pages/_authen.css",
+          "name": "_authen.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
+          "type": "sass"
+        },
+        "cf67e7e0": {
+          "id": "cf67e7e0",
+          "path": "assets/css/4-pages/_gallery.sass",
+          "output": "assets/css/4-pages/_gallery.css",
+          "name": "_gallery.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
+          "type": "sass"
+        },
+        "36c2987f": {
+          "id": "36c2987f",
+          "path": "assets/css/4-pages/_profile.sass",
+          "output": "assets/css/4-pages/_profile.css",
+          "name": "_profile.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
+          "type": "sass"
+        },
+        "6b6b27d4": {
+          "id": "6b6b27d4",
+          "path": "assets/img/5554 Davenfund Logo - Circle.png",
+          "output": "assets/img/5554 Davenfund Logo - Circle.png",
+          "name": "5554 Davenfund Logo - Circle.png",
+          "category": "IMAGE",
+          "size": 3194021,
+          "type": "png",
+          "initialSize": 3194021,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "da46d582": {
+          "id": "da46d582",
+          "path": "assets/img/5554 Davenfund Logo - Transparent Background.png",
+          "output": "assets/img/5554 Davenfund Logo - Transparent Background.png",
+          "name": "5554 Davenfund Logo - Transparent Background.png",
+          "category": "IMAGE",
+          "size": 4344400,
+          "type": "png",
+          "initialSize": 4344400,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "a862a5c0": {
+          "id": "a862a5c0",
+          "path": "assets/img/5554 Davenfund Logo.jpg",
+          "output": "assets/img/5554 Davenfund Logo.jpg",
+          "name": "5554 Davenfund Logo.jpg",
+          "category": "IMAGE",
+          "size": 1589183,
+          "type": "jpg",
+          "initialSize": 1589183,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d13df0c2": {
+          "id": "d13df0c2",
+          "path": "assets/css/2-basics/_center-page.sass",
+          "output": "assets/css/2-basics/_center-page.css",
+          "name": "_center-page.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
+          "type": "sass"
+        },
+        "e5fec134": {
+          "id": "e5fec134",
+          "path": "everybody.php",
+          "output": "everybody.php",
+          "name": "everybody.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
