--- a/prepros.cfg
+++ b/prepros.cfg
@@ -500,6 +500,19 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "69b4285f": {
+          "id": "69b4285f",
+          "path": "assets/img/avatar.JPG",
+          "output": "assets/img/avatar.JPG",
+          "name": "avatar.JPG",
+          "category": "IMAGE",
+          "size": 116716,
+          "type": "jpg",
+          "initialSize": 116716,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
