Profile, Layouts, Edits.
Changed the Edit form to be more accommodating.

Added a layout.sass file for things like single-column, double-column,
layouts of my own.

Build a profile page. I don’t know if I want it to be a modal or not…

Tomorrow’s the last day to work on this front end mockup, before the
review on Friday.

Then I get to integrate revisions and put in the database code next
week.

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -371,51 +371,11 @@
           "height": 0,
           "width": 0
         },
-        "49dba88a": {
-          "id": "49dba88a",
-          "path": "assets/css/4-pages/_authen.sass",
-          "output": "assets/css/4-pages/_authen.css",
-          "name": "_authen.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "abc0766b"
-          ],
-          "type": "sass"
-        },
         "cf67e7e0": {
           "id": "cf67e7e0",
           "path": "assets/css/4-pages/_gallery.sass",
           "output": "assets/css/4-pages/_gallery.css",
           "name": "_gallery.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "abc0766b"
-          ],
-          "type": "sass"
-        },
-        "36c2987f": {
-          "id": "36c2987f",
-          "path": "assets/css/4-pages/_profile.sass",
-          "output": "assets/css/4-pages/_profile.css",
-          "name": "_profile.sass",
           "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
@@ -470,26 +430,6 @@
           "height": 0,
           "width": 0
         },
-        "d13df0c2": {
-          "id": "d13df0c2",
-          "path": "assets/css/2-basics/_center-page.sass",
-          "output": "assets/css/2-basics/_center-page.css",
-          "name": "_center-page.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "abc0766b"
-          ],
-          "type": "sass"
-        },
         "e5fec134": {
           "id": "e5fec134",
           "path": "everybody.php",
@@ -513,6 +453,117 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "2b5b766c": {
+          "id": "2b5b766c",
+          "path": "assets/css/3-modules/_modal-profile.sass",
+          "output": "assets/css/3-modules/_modal-profile.css",
+          "name": "_modal-profile.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
+          "type": "sass"
+        },
+        "eb22d70c": {
+          "id": "eb22d70c",
+          "path": "assets/css/4-pages/_edit.sass",
+          "output": "assets/css/4-pages/_edit.css",
+          "name": "_edit.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
+          "type": "sass"
+        },
+        "2eb7c042": {
+          "id": "2eb7c042",
+          "path": "assets/css/3-modules/_authen.sass",
+          "output": "assets/css/3-modules/_authen.css",
+          "name": "_authen.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
+          "type": "sass"
+        },
+        "36c2987f": {
+          "id": "36c2987f",
+          "path": "assets/css/4-pages/_profile.sass",
+          "output": "assets/css/4-pages/_profile.css",
+          "name": "_profile.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
+          "type": "sass"
+        },
+        "367df2c7": {
+          "id": "367df2c7",
+          "path": "assets/includes/proposal.php",
+          "output": "assets/includes/proposal.php",
+          "name": "proposal.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "362cdff9": {
+          "id": "362cdff9",
+          "path": "assets/css/2-basics/_layouts.sass",
+          "output": "assets/css/2-basics/_layouts.css",
+          "name": "_layouts.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
