Styling Almost Done
Some enduring annoyances (footers, video, etc) were taken care of.

Some other basic styles are in place (including tricolor banner of DU’s
secondary colors).

Going to review how I’m integrating the PHP db scripts before I finish
with my styles on the Gallery, Profiles, etc (I still want to use
lightboxes—rather than a profile page which feels like a dead end).

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -460,7 +460,7 @@
           "output": "assets/css/3-modules/_modal-profile.css",
           "name": "_modal-profile.sass",
           "category": "CSS",
-          "autoCompile": false,
+          "autoCompile": true,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -468,10 +468,8 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "abc0766b"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "sass"
         },
         "eb22d70c": {
@@ -564,6 +562,17 @@
             "abc0766b"
           ],
           "type": "sass"
+        },
+        "02086c4e": {
+          "id": "02086c4e",
+          "path": "assets/includes/hero.php",
+          "output": "assets/includes/hero.php",
+          "name": "hero.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
