--- a/prepros.cfg
+++ b/prepros.cfg
@@ -307,24 +307,6 @@
           ],
           "type": "sass"
         },
-        "b9781c03": {
-          "id": "b9781c03",
-          "path": "assets/css/4-pages/register.sass",
-          "output": "assets/css/4-pages/register.css",
-          "name": "register.sass",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
         "bf460d63": {
           "id": "bf460d63",
           "path": "assets/css/3-modules/_nav.sass",
@@ -460,7 +442,7 @@
           "output": "assets/css/3-modules/_modal-profile.css",
           "name": "_modal-profile.sass",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -468,8 +450,10 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
           "type": "sass"
         },
         "eb22d70c": {
@@ -563,16 +547,58 @@
           ],
           "type": "sass"
         },
-        "02086c4e": {
-          "id": "02086c4e",
-          "path": "assets/includes/hero.php",
-          "output": "assets/includes/hero.php",
-          "name": "hero.php",
+        "1a56134b": {
+          "id": "1a56134b",
+          "path": "assets/img/heart-outline.php",
+          "output": "assets/img/heart-outline.php",
+          "name": "heart-outline.php",
           "category": "JUST_WATCH",
           "customOutput": false,
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "f4fd048d": {
+          "id": "f4fd048d",
+          "path": "assets/img/heart.php",
+          "output": "assets/img/heart.php",
+          "name": "heart.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "f1a0ddc5": {
+          "id": "f1a0ddc5",
+          "path": "about.php",
+          "output": "about.php",
+          "name": "about.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "cc8cff38": {
+          "id": "cc8cff38",
+          "path": "assets/css/4-pages/_register.sass",
+          "output": "assets/css/4-pages/_register.css",
+          "name": "_register.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
