--- a/prepros.cfg
+++ b/prepros.cfg
@@ -599,6 +599,37 @@
             "abc0766b"
           ],
           "type": "sass"
+        },
+        "db214cc7": {
+          "id": "db214cc7",
+          "path": "assets/css/3-modules/_cards.sass",
+          "output": "assets/css/3-modules/_cards.css",
+          "name": "_cards.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
+          "type": "sass"
+        },
+        "232f5c6c": {
+          "id": "232f5c6c",
+          "path": "assets/includes/cards.php",
+          "output": "assets/includes/cards.php",
+          "name": "cards.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
