--- a/prepros.cfg
+++ b/prepros.cfg
@@ -442,7 +442,7 @@
           "output": "assets/css/3-modules/_modal-profile.css",
           "name": "_modal-profile.sass",
           "category": "CSS",
-          "autoCompile": false,
+          "autoCompile": true,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -450,10 +450,8 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "abc0766b"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "sass"
         },
         "eb22d70c": {
@@ -630,6 +628,41 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "eaa2499e": {
+          "id": "eaa2499e",
+          "path": "assets/includes/db.php",
+          "output": "assets/includes/db.php",
+          "name": "db.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "9a8d73ba": {
+          "id": "9a8d73ba",
+          "path": "create.php",
+          "output": "create.php",
+          "name": "create.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "36e321b5": {
+          "id": "36e321b5",
+          "path": "assets/img/avatar-icon-700x200.png",
+          "output": "assets/img/avatar-icon-700x200.png",
+          "name": "avatar-icon-700x200.png",
+          "category": "IMAGE",
+          "size": 28404,
+          "type": "png",
+          "initialSize": 28404,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
