--- a/prepros.cfg
+++ b/prepros.cfg
@@ -663,6 +663,84 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "3d10be58": {
+          "id": "3d10be58",
+          "path": "assets/img/DU Logo Center Navbar.png",
+          "output": "assets/img/DU Logo Center Navbar.png",
+          "name": "DU Logo Center Navbar.png",
+          "category": "IMAGE",
+          "size": 22033,
+          "type": "png",
+          "initialSize": 22033,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "8899cc79": {
+          "id": "8899cc79",
+          "path": "assets/img/DavenFund Text Menu.png",
+          "output": "assets/img/DavenFund Text Menu.png",
+          "name": "DavenFund Text Menu.png",
+          "category": "IMAGE",
+          "size": 20909,
+          "type": "png",
+          "initialSize": 20909,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "85bff42f": {
+          "id": "85bff42f",
+          "path": "assets/img/Like Simple.png",
+          "output": "assets/img/Like Simple.png",
+          "name": "Like Simple.png",
+          "category": "IMAGE",
+          "size": 21008,
+          "type": "png",
+          "initialSize": 21008,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0e2f80bf": {
+          "id": "0e2f80bf",
+          "path": "assets/img/DavenFund Text Only - White.png",
+          "output": "assets/img/DavenFund Text Only - White.png",
+          "name": "DavenFund Text Only - White.png",
+          "category": "IMAGE",
+          "size": 48356,
+          "type": "png",
+          "initialSize": 48356,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0eff7dd8": {
+          "id": "0eff7dd8",
+          "path": "assets/img/White DU.png",
+          "output": "assets/img/White DU.png",
+          "name": "White DU.png",
+          "category": "IMAGE",
+          "size": 50645,
+          "type": "png",
+          "initialSize": 50645,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5ab044e3": {
+          "id": "5ab044e3",
+          "path": "assets/img/Like Simple - OUTLINE.png",
+          "output": "assets/img/Like Simple - OUTLINE.png",
+          "name": "Like Simple - OUTLINE.png",
+          "category": "IMAGE",
+          "size": 24983,
+          "type": "png",
+          "initialSize": 24983,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
