--- a/prepros.cfg
+++ b/prepros.cfg
@@ -640,19 +640,6 @@
           "parents": [],
           "type": "php"
         },
-        "36e321b5": {
-          "id": "36e321b5",
-          "path": "assets/img/avatar-icon-700x200.png",
-          "output": "assets/img/avatar-icon-700x200.png",
-          "name": "avatar-icon-700x200.png",
-          "category": "IMAGE",
-          "size": 28404,
-          "type": "png",
-          "initialSize": 28404,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "232f5c6c": {
           "id": "232f5c6c",
           "path": "assets/includes/cards.php",
@@ -738,6 +725,32 @@
           "size": 24983,
           "type": "png",
           "initialSize": 24983,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2c254fbb": {
+          "id": "2c254fbb",
+          "path": "assets/img/avatar-icon.png",
+          "output": "assets/img/avatar-icon.png",
+          "name": "avatar-icon.png",
+          "category": "IMAGE",
+          "size": 28404,
+          "type": "png",
+          "initialSize": 28404,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "090dbc2c": {
+          "id": "090dbc2c",
+          "path": "assets/img/df-logo-white.png",
+          "output": "assets/img/df-logo-white.png",
+          "name": "df-logo-white.png",
+          "category": "IMAGE",
+          "size": 14776,
+          "type": "png",
+          "initialSize": 14776,
           "optimized": false,
           "height": 0,
           "width": 0
