SQL DB INCLUDED
In case my db vanished, I’d really not like to rebuild it all over
again.

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -754,6 +754,134 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "510e10e2": {
+          "id": "510e10e2",
+          "path": "update.php",
+          "output": "update.php",
+          "name": "update.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "64ad5931": {
+          "id": "64ad5931",
+          "path": "uploaded_images/1-davenport.jpg",
+          "output": "uploaded_images/1-davenport.jpg",
+          "name": "1-davenport.jpg",
+          "category": "IMAGE",
+          "size": 42776,
+          "type": "jpg",
+          "initialSize": 42776,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b9fb6422": {
+          "id": "b9fb6422",
+          "path": "uploaded_images/Munny-Speakers.jpg",
+          "output": "uploaded_images/Munny-Speakers.jpg",
+          "name": "Munny-Speakers.jpg",
+          "category": "IMAGE",
+          "size": 46414,
+          "type": "jpg",
+          "initialSize": 46414,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "acdcf3c4": {
+          "id": "acdcf3c4",
+          "path": "uploaded_images/graduation.jpg",
+          "output": "uploaded_images/graduation.jpg",
+          "name": "graduation.jpg",
+          "category": "IMAGE",
+          "size": 171173,
+          "type": "jpg",
+          "initialSize": 171173,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5c48f927": {
+          "id": "5c48f927",
+          "path": "uploaded_images/puppy.jpg",
+          "output": "uploaded_images/puppy.jpg",
+          "name": "puppy.jpg",
+          "category": "IMAGE",
+          "size": 5465,
+          "type": "jpg",
+          "initialSize": 5465,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "eba0ca97": {
+          "id": "eba0ca97",
+          "path": "uploaded_images/avatar.jpg",
+          "output": "uploaded_images/avatar.jpg",
+          "name": "avatar.jpg",
+          "category": "IMAGE",
+          "size": 116716,
+          "type": "jpg",
+          "initialSize": 116716,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "89cdce50": {
+          "id": "89cdce50",
+          "path": "uploaded_images/College_Student_thumb.jpg",
+          "output": "uploaded_images/College_Student_thumb.jpg",
+          "name": "College_Student_thumb.jpg",
+          "category": "IMAGE",
+          "size": 26470,
+          "type": "jpg",
+          "initialSize": 26470,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "687c786c": {
+          "id": "687c786c",
+          "path": "uploaded_images/DavenportTrip5.jpg",
+          "output": "uploaded_images/DavenportTrip5.jpg",
+          "name": "DavenportTrip5.jpg",
+          "category": "IMAGE",
+          "size": 2803971,
+          "type": "jpg",
+          "initialSize": 2803971,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "f94fc2e6": {
+          "id": "f94fc2e6",
+          "path": "uploaded_images/DavenportTrip6.jpg",
+          "output": "uploaded_images/DavenportTrip6.jpg",
+          "name": "DavenportTrip6.jpg",
+          "category": "IMAGE",
+          "size": 3088784,
+          "type": "jpg",
+          "initialSize": 3088784,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "de9df2bd": {
+          "id": "de9df2bd",
+          "path": "uploaded_images/mascot.jpg",
+          "output": "uploaded_images/mascot.jpg",
+          "name": "mascot.jpg",
+          "category": "IMAGE",
+          "size": 21561,
+          "type": "jpg",
+          "initialSize": 21561,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
